--- a/Views/MainPage.xaml
+++ b/Views/MainPage.xaml
@@ -16,12 +16,15 @@
 
 
 
-    <StackLayout x:Name="stack" Orientation="Vertical">
-        <Label BackgroundColor="CadetBlue" Text="Form Data" FontSize="30" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" FontAttributes="Bold" Grid.Row="0" Grid.Column="0"/>
+    <ScrollView>
+        <StackLayout x:Name="stack" Orientation="Vertical">
+            <Label BackgroundColor="CadetBlue" Text="Form Data" FontSize="30" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" FontAttributes="Bold" Grid.Row="0" Grid.Column="0"/>
 
-        <dxg:DataGridView x:Name="datagrid" AutoGenerateColumnsMode="Auto" EditorShowMode="DoubleTap" AllowDragDropRows="True" Grid.Row="1" Grid.Column="0" BorderThickness="5" VerticalLineThickness="3">
+            <!--<dxg:DataGridView x:Name="datagrid" AutoGenerateColumnsMode="Auto" EditorShowMode="DoubleTap" AllowDragDropRows="True" Grid.Row="1" Grid.Column="0" BorderThickness="5" VerticalLineThickness="3">
 
-        </dxg:DataGridView>
-    </StackLayout>
+             </dxg:DataGridView>-->
+        </StackLayout>
+    </ScrollView>
+    
 
 </ContentPage>
