--- a/Views/MainPage.xaml
+++ b/Views/MainPage.xaml
@@ -55,9 +55,11 @@
             </dxg:DataGridView.GroupSummaries>
 
         </dxg:DataGridView>
-
+        <Button Text="Go to Second Page" Clicked="OnNavigateButtonClicked"/>
     </Grid>
-    
+
+   
+
 </ContentPage>
 
 
