--- a/Views/MainPage.xaml
+++ b/Views/MainPage.xaml
@@ -17,7 +17,8 @@
     <ScrollView>
         <StackLayout x:Name="stack" Orientation="Vertical">
             <Label BackgroundColor="WhiteSmoke" Text="Form Data" FontSize="30" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" FontAttributes="Bold" Grid.Row="0" Grid.Column="0"/>
-
+            <Button Text="data" Command="{Binding checkDataCommand}"/>
+            <Button Text="update" Command="{Binding updatedataCommand}"/>
         </StackLayout>
     </ScrollView>
     
