--- a/Views/MainPage.xaml
+++ b/Views/MainPage.xaml
@@ -15,7 +15,7 @@
              x:DataType="viewmodel:MainPageViewModel">
 
     <ScrollView>
-        <StackLayout x:Name="stack" Orientation="Vertical">
+        <StackLayout x:Name="stack" Orientation="Vertical" HorizontalOptions="StartAndExpand">
             <Label BackgroundColor="WhiteSmoke" Text="Form Data" FontSize="30" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" FontAttributes="Bold" Grid.Row="0" Grid.Column="0"/>
             <Button Text="data" Command="{Binding checkDataCommand}"/>
             <Button Text="update" Command="{Binding updatedataCommand}"/>
